fixed alignment of danger btn

--- a/haruka_theme/static/haruka_theme/css/custom.css
+++ b/haruka_theme/static/haruka_theme/css/custom.css
@@ -52,7 +52,7 @@
 }
 
 #inner div.row div.well.span7 form.buttons div.form-action a.btn.danger {
-	margin-top:0px;
+	top:0px;
 }
 
 #tabs{
